--- a/gs-live-server/pom.xml
+++ b/gs-live-server/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>gs-live-server</artifactId>
+    <packaging>war</packaging>
 
     <name>gs-live-server</name>
     <description>gs live server project</description>
